--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -30,50 +30,42 @@ body {
 			color: $color-white;
 		}
 	}
-}
 
-#main-menu {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	padding: 15px 20px 10px;
-	@include cross-browser(transition, background-color linear .3s);
-
-	&.scroll {
-		background-color: $color-black-red;
-		-webkit-box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.48);
-		-moz-box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.48);
-		box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.48);
-	}
-
-	ul {
-		list-style: none;
-		margin: 0px;
-		padding: 0px;
-		vertical-align: middle;
-
-		li {
-			display: inline;
-			padding: 0 7px;
-
-			a {
-				font-size: 12px;
-
-				&.active {
-					text-decoration: underline;
-				}
-			}
-
-			&.user {
-				img {
-					margin-right: 5px;
-				}
-			}
-
-			&.redes a {
-				padding: 0 3px;
-			}
-		}
+	p {
+		color: $color-white;
 	}
 }
+
+.button {
+	font-size: 15px;
+	color: $color-white;
+	background-color: #0978BE;
+	border: 1px solid $color-white;
+	padding: 5px 15px;
+	@include cross-browser(box-shadow, 0px 2px 12px -1px rgba(0,0,0,0.67));
+	@include cross-browser(border-radius, 20px);
+	@include cross-browser(transition, transform linear .1s);
+
+	i {
+		font-size: 15px;
+		margin-right: 5px;
+	}
+
+	&.facebook {
+		background-color: #3E549C;
+		border: none;
+	}
+
+	&:hover, &:focus {
+		@include cross-browser(transform, scale(1.15));
+		outline: none;
+	}
+
+	&:active {
+		@include cross-browser(transform, scale(1));
+		outline: none;
+	}
+}
+
+@import "menu";
+@import "home";
