--- a/frontend/css/_home.scss
+++ b/frontend/css/_home.scss
@@ -11,4 +11,13 @@
 			margin-bottom: 20px;
 		}
 	}
+
+	.footer {
+		position: absolute;
+		bottom: 0px;
+		left: 0px;
+		width: 100%;
+		height: 26px;
+		background: url(../img/home/separador.png);
+	}
 }
