--- a/frontend/css/_menu.scss
+++ b/frontend/css/_menu.scss
@@ -1,5 +1,6 @@
 #main-menu {
 	position: fixed;
+	z-index: 1000;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -39,6 +40,15 @@
 
 			&.redes a {
 				padding: 0 3px;
+
+				img {
+					@include cross-browser(transform, rotate(0deg));
+					@include cross-browser(transition, transform linear .3s);
+
+					&:hover {
+						@include cross-browser(transform, rotate(360deg));
+					}
+				}
 			}
 		}
 	}
