--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -5,7 +5,7 @@ html, body {
   overflow: hidden; }
 
 body {
-  background-color: #E2383C;
+  background: url(../img/bg.png);
   font-family: 'futuramedium'; }
   body #content {
     position: absolute;
@@ -24,11 +24,12 @@ body {
     color: #fff; }
 
 .button {
+  font-family: 'freshmannormal';
   font-size: 15px;
   color: #fff;
   background-color: #0978BE;
   border: 1px solid #fff;
-  padding: 5px 15px;
+  padding: 5px 35px;
   -ms-box-shadow: 0px 2px 12px -1px rgba(0, 0, 0, 0.67);
   -o-box-shadow: 0px 2px 12px -1px rgba(0, 0, 0, 0.67);
   -moz-box-shadow: 0px 2px 12px -1px rgba(0, 0, 0, 0.67);
@@ -49,7 +50,8 @@ body {
     margin-right: 5px; }
   .button.facebook {
     background-color: #3E549C;
-    border: none; }
+    border: none;
+    font-family: 'futuramedium'; }
   .button:hover, .button:focus {
     -ms-transform: scale(1.15);
     -o-transform: scale(1.15);
@@ -67,6 +69,7 @@ body {
 
 #main-menu {
   position: fixed;
+  z-index: 1000;
   top: 0;
   left: 0;
   width: 100%;
@@ -97,6 +100,23 @@ body {
         margin-right: 5px; }
       #main-menu ul li.redes a {
         padding: 0 3px; }
+        #main-menu ul li.redes a img {
+          -ms-transform: rotate(0deg);
+          -o-transform: rotate(0deg);
+          -moz-transform: rotate(0deg);
+          -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+          -ms-transition: transform linear 0.3s;
+          -o-transition: transform linear 0.3s;
+          -moz-transition: transform linear 0.3s;
+          -webkit-transition: transform linear 0.3s;
+          transition: transform linear 0.3s; }
+          #main-menu ul li.redes a img:hover {
+            -ms-transform: rotate(360deg);
+            -o-transform: rotate(360deg);
+            -moz-transform: rotate(360deg);
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); }
 
 #home {
   position: relative;
@@ -107,5 +127,86 @@ body {
     #home .conectar button.facebook {
       margin-top: 10px;
       margin-bottom: 20px; }
+  #home .footer {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 26px;
+    background: url(../img/home/separador.png); }
+
+#galeria {
+  position: relative;
+  display: block;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  color: #fff; }
+  #galeria .container .list .row {
+    margin-top: 60px;
+    padding-bottom: 70px;
+    position: relative; }
+    #galeria .container .list .row:before {
+      display: block;
+      position: absolute;
+      bottom: 0px;
+      left: 0px;
+      width: 100%;
+      text-align: center;
+      content: url(../img/galeria/separador.png); }
+    #galeria .container .list .row:last-child:before {
+      content: ''; }
+    #galeria .container .list .row .block .user {
+      font-size: 14px;
+      vertical-align: middle;
+      margin-bottom: 10px; }
+    #galeria .container .list .row .block .player {
+      position: relative; }
+      #galeria .container .list .row .block .player:before {
+        content: '';
+        display: block;
+        padding-top: 100%; }
+      #galeria .container .list .row .block .player .content {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%; }
+        #galeria .container .list .row .block .player .content img.fake {
+          position: relative;
+          width: 100%;
+          height: 100%; }
+        #galeria .container .list .row .block .player .content img.play {
+          position: absolute;
+          top: 35%;
+          left: 0;
+          right: 0;
+          margin-left: auto;
+          margin-right: auto; }
+    #galeria .container .list .row .block .share {
+      margin-top: 10px;
+      margin-bottom: 15px; }
+      #galeria .container .list .row .block .share a {
+        margin: 0 5px; }
+        #galeria .container .list .row .block .share a img {
+          -ms-transform: rotate(0deg);
+          -o-transform: rotate(0deg);
+          -moz-transform: rotate(0deg);
+          -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+          -ms-transition: transform linear 0.3s;
+          -o-transition: transform linear 0.3s;
+          -moz-transition: transform linear 0.3s;
+          -webkit-transition: transform linear 0.3s;
+          transition: transform linear 0.3s; }
+          #galeria .container .list .row .block .share a img:hover {
+            -ms-transform: rotate(360deg);
+            -o-transform: rotate(360deg);
+            -moz-transform: rotate(360deg);
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); }
+  #galeria .container button.ver-mas {
+    padding-bottom: 5px; }
+    #galeria .container button.ver-mas img {
+      max-width: 66px; }
 
 /*# sourceMappingURL=style.css.map */
