--- a/frontend/css/_galeria.scss
+++ b/frontend/css/_galeria.scss
@@ -97,4 +97,13 @@
 			}
 		}
 	}
+
+	.footer {
+		position: absolute;
+		bottom: 0px;
+		left: 0px;
+		width: 100%;
+		height: 26px;
+		background: url(../img/galeria/separador-bottom.png);
+	}
 }
