--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -208,5 +208,34 @@ body {
     padding-bottom: 5px; }
     #galeria .container button.ver-mas img {
       max-width: 66px; }
+  #galeria .footer {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 26px;
+    background: url(../img/galeria/separador-bottom.png); }
+
+#premios {
+  position: relative;
+  display: block;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  background-color: #fff; }
+  #premios .container {
+    max-width: 680px; }
+  #premios img.title {
+    margin-bottom: 50px; }
+  #premios p {
+    color: #AC2B3E;
+    max-width: 200px;
+    margin: 20px auto 0; }
+  #premios .footer {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 26px;
+    background: url(../img/premios/separador.png); }
 
 /*# sourceMappingURL=style.css.map */
