UPDATE: Se agrega efecto parallax a fondo de kit

--- a/frontend/css/_kit.scss
+++ b/frontend/css/_kit.scss
@@ -2,6 +2,8 @@
 	position: relative;
 	display: block;
 	padding-top: 50px;
+	padding-bottom: 77px;
+	background: url(../img/kit/challa.png);
 
 	.container {
 		max-width: 915px;
