--- a/frontend/css/_menu.scss
+++ b/frontend/css/_menu.scss
@@ -57,7 +57,7 @@
 							top: 18px;
 							left: 0;
 							background-color: $color-white;
-							width: 100%;
+							min-width: 100%;
 							max-height: 0px;
 							overflow: hidden;
 							@include cross-browser(border-radius, 5px);
