--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -91,8 +91,10 @@ body {
   transition: background-color linear 0.3s; }
   #main-menu.scroll {
     background-color: #AC2B3E;
-    -webkit-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48);
+    -ms-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48);
+    -o-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48);
     -moz-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48);
+    -webkit-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48);
     box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48); }
   #main-menu ul {
     list-style: none;
@@ -151,7 +153,12 @@ body {
               #main-menu ul li.user .data .name .menu ul li a {
                 color: #E2383C; }
         #main-menu ul li.user .data .name:hover .menu {
-          max-height: 40px; }
+          max-height: 40px;
+          -ms-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48);
+          -o-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48);
+          -moz-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48);
+          -webkit-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48);
+          box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.48); }
       #main-menu ul li.redes a {
         padding: 0 3px; }
         #main-menu ul li.redes a img {
@@ -171,6 +178,170 @@ body {
             -moz-transform: rotate(360deg);
             -webkit-transform: rotate(360deg);
             transform: rotate(360deg); }
+
+#record {
+  display: block;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url(../img/velo.png);
+  z-index: 2000; }
+  #record .wrapper {
+    max-width: 610px;
+    position: relative;
+    margin: 8% auto 0; }
+    #record .wrapper:before {
+      display: block;
+      content: '';
+      padding-top: 65.5%; }
+    #record .wrapper .content {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #E2383C;
+      border: 1px solid #fff;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      border-radius: 5px;
+      padding: 10px; }
+      #record .wrapper .content img.btn-close {
+        position: absolute;
+        top: -13px;
+        right: -17px;
+        cursor: pointer;
+        width: 46px;
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        -moz-transform: scale(1);
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -ms-transition: transform linear 0.1s;
+        -o-transition: transform linear 0.1s;
+        -moz-transition: transform linear 0.1s;
+        -webkit-transition: transform linear 0.1s;
+        transition: transform linear 0.1s; }
+        #record .wrapper .content img.btn-close:hover {
+          -ms-transform: scale(1.15);
+          -o-transform: scale(1.15);
+          -moz-transform: scale(1.15);
+          -webkit-transform: scale(1.15);
+          transform: scale(1.15); }
+        #record .wrapper .content img.btn-close:active, #record .wrapper .content img.btn-close:focus {
+          -ms-transform: scale(1);
+          -o-transform: scale(1);
+          -moz-transform: scale(1);
+          -webkit-transform: scale(1);
+          transform: scale(1); }
+      #record .wrapper .content .title {
+        margin-bottom: 35px; }
+      #record .wrapper .content .pilucho-wrapper {
+        max-width: 282px;
+        width: 100%;
+        position: relative;
+        margin: 0 auto 10px; }
+        #record .wrapper .content .pilucho-wrapper:before {
+          display: block;
+          content: '';
+          padding-top: 100%; }
+        #record .wrapper .content .pilucho-wrapper .pilucho-content {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: url(../img/record/desktop/pilucho.png);
+          background-size: 100% 100%; }
+          #record .wrapper .content .pilucho-wrapper .pilucho-content img.play {
+            width: 70px;
+            margin-top: 37%;
+            cursor: pointer;
+            -ms-transform: scale(1);
+            -o-transform: scale(1);
+            -moz-transform: scale(1);
+            -webkit-transform: scale(1);
+            transform: scale(1);
+            -ms-transition: transform linear 0.1s;
+            -o-transition: transform linear 0.1s;
+            -moz-transition: transform linear 0.1s;
+            -webkit-transition: transform linear 0.1s;
+            transition: transform linear 0.1s; }
+            #record .wrapper .content .pilucho-wrapper .pilucho-content img.play:hover {
+              -ms-transform: scale(1.15);
+              -o-transform: scale(1.15);
+              -moz-transform: scale(1.15);
+              -webkit-transform: scale(1.15);
+              transform: scale(1.15); }
+            #record .wrapper .content .pilucho-wrapper .pilucho-content img.play:active, #record .wrapper .content .pilucho-wrapper .pilucho-content img.play:focus {
+              -ms-transform: scale(1);
+              -o-transform: scale(1);
+              -moz-transform: scale(1);
+              -webkit-transform: scale(1);
+              transform: scale(1); }
+      #record .wrapper .content .tiempo, #record .wrapper .content p {
+        color: #fff;
+        font-size: 12px; }
+      #record .wrapper .content .controles {
+        color: #fff;
+        font-size: 12px; }
+        #record .wrapper .content .controles .grabar {
+          margin-bottom: 25px;
+          margin-top: 30px; }
+        #record .wrapper .content .controles .btn-stop {
+          height: 85px;
+          display: inline-block;
+          background: url(../img/record/desktop/btn-stop.png); }
+          #record .wrapper .content .controles .btn-stop .contador {
+            font-size: 25px;
+            margin-top: 25px; }
+        #record .wrapper .content .controles img, #record .wrapper .content .controles .btn-stop {
+          width: 85px;
+          cursor: pointer;
+          -ms-transform: scale(1);
+          -o-transform: scale(1);
+          -moz-transform: scale(1);
+          -webkit-transform: scale(1);
+          transform: scale(1);
+          -ms-transition: transform linear 0.1s;
+          -o-transition: transform linear 0.1s;
+          -moz-transition: transform linear 0.1s;
+          -webkit-transition: transform linear 0.1s;
+          transition: transform linear 0.1s; }
+          #record .wrapper .content .controles img:hover, #record .wrapper .content .controles .btn-stop:hover {
+            -ms-transform: scale(1.15);
+            -o-transform: scale(1.15);
+            -moz-transform: scale(1.15);
+            -webkit-transform: scale(1.15);
+            transform: scale(1.15); }
+          #record .wrapper .content .controles img:active, #record .wrapper .content .controles img:focus, #record .wrapper .content .controles .btn-stop:active, #record .wrapper .content .controles .btn-stop:focus {
+            -ms-transform: scale(1);
+            -o-transform: scale(1);
+            -moz-transform: scale(1);
+            -webkit-transform: scale(1);
+            transform: scale(1); }
+          #record .wrapper .content .controles img.loader, #record .wrapper .content .controles .btn-stop.loader {
+            cursor: default; }
+            #record .wrapper .content .controles img.loader:hover, #record .wrapper .content .controles .btn-stop.loader:hover {
+              -ms-transform: scale(1);
+              -o-transform: scale(1);
+              -moz-transform: scale(1);
+              -webkit-transform: scale(1);
+              transform: scale(1); }
+        #record .wrapper .content .controles .disabled {
+          opacity: .3; }
+          #record .wrapper .content .controles .disabled img {
+            cursor: default; }
+            #record .wrapper .content .controles .disabled img:hover {
+              -ms-transform: scale(1);
+              -o-transform: scale(1);
+              -moz-transform: scale(1);
+              -webkit-transform: scale(1);
+              transform: scale(1); }
 
 #home {
   position: relative;
