UPDATE: vista final al grabar

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -342,6 +342,16 @@ body {
               -moz-transform: scale(1);
               -webkit-transform: scale(1);
               transform: scale(1); }
+      #record .wrapper .content .final {
+        padding-top: 40px; }
+        #record .wrapper .content .final p {
+          margin: 20px 45px 0;
+          font-size: 16px; }
+          #record .wrapper .content .final p.mas {
+            margin-top: 50px; }
+        #record .wrapper .content .final .share {
+          color: #fff;
+          margin-top: 50px; }
 
 #home {
   position: relative;
