--- a/frontend/css/_record.scss
+++ b/frontend/css/_record.scss
@@ -154,6 +154,24 @@
 					}
 				}
 			}
+
+			.final {
+				padding-top: 40px;
+
+				p {
+					margin: 20px 45px 0;
+					font-size: 16px;
+
+					&.mas {
+						margin-top: 50px;
+					}
+				}
+
+				.share {
+					color: $color-white;
+					margin-top: 50px;
+				}
+			}
 		}
 	}
 }
