UPDATE: ajustes del home para movil

--- a/frontend/css/_config.scss
+++ b/frontend/css/_config.scss
@@ -10,3 +10,9 @@ $color-white:#fff;
 $colot-black:#000;
 $color-red:#E2383C;
 $color-black-red:#AC2B3E;
+
+
+$screen-lg:1200px;
+$screen-md:992px;
+$screen-sm:768px;
+$screen-xs:580px;
