--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -77,6 +77,10 @@ body {
 		@include cross-browser(transform, scale(1));
 		outline: none;
 	}
+
+	@media screen and (max-width: $screen-xs) {
+		width: 100%;
+	}
 }
 
 @import "menu";
