UPDATE: Vista para grabar en movil

--- a/frontend/css/_config.scss
+++ b/frontend/css/_config.scss
@@ -10,6 +10,7 @@ $color-white:#fff;
 $colot-black:#000;
 $color-red:#E2383C;
 $color-black-red:#AC2B3E;
+$color-blue:#0978BE;
 
 
 $screen-lg:1200px;
