--- a/frontend/css/_kit.scss
+++ b/frontend/css/_kit.scss
@@ -20,4 +20,19 @@
 	.row {
 		margin-bottom: 50px;
 	}
+
+	@media screen and (max-width: $screen-xs) {
+		p {
+			font-size: 18px;
+			margin-top: 40px;
+		}
+
+		.row {
+			margin-bottom: 0px;
+
+			& > div {
+				margin-bottom: 60px;
+			}
+		}
+	}
 }
