--- a/frontend/css/_menu.scss
+++ b/frontend/css/_menu.scss
@@ -7,6 +7,11 @@
 	padding: 15px 20px 10px;
 	@include cross-browser(transition, background-color linear .3s);
 
+	.logo {
+		position: relative;
+		z-index: 1020;
+	}
+
 	@media screen and (max-width: $screen-xs) {
 		text-align: center;
 	}
@@ -102,6 +107,65 @@
 						@include cross-browser(transform, rotate(360deg));
 					}
 				}
+			}
+		}
+	}
+
+	.menu-movil {
+		position: absolute;
+		top: 20px;
+		left: 10px;
+		cursor: pointer;
+		width: 34px;
+		z-index: 1030;
+	}
+
+	.menu-movil-content {
+		position: fixed;
+		top: 0;
+		left: -100%;
+		background-color: $color-black-red;
+		width: 100%;
+		height: 100%;
+		@include cross-browser(transition, left linear .2s);
+
+		&.open {
+			left: 0;
+
+			@media screen and (min-width: $screen-xs) {
+				left: -100%;
+			}
+		}
+
+		.container {
+			padding-top: 100px;
+			max-width: 80%;
+
+			.row {
+				margin-bottom: 40px;
+
+				a {
+					img {
+						width: 57px;
+						display: block;
+						margin: 0 auto 20px;
+
+						&.user {
+							@include cross-browser(border-radius, 30px);
+						}
+					}
+				}
+			}
+		}
+
+		.redes {
+			position: absolute;
+			width: 100%;
+			bottom: 20px;
+			left: 0;
+
+			a {
+				margin: 0 10px;
 			}
 		}
 	}
