UPDATE: Se utiliza nueva librería para galería, ya que con esta se puede realizar efecto de movimiento en la boca

--- a/frontend/css/_galeria.scss
+++ b/frontend/css/_galeria.scss
@@ -90,6 +90,28 @@
 									display: none;
 								}
 							}
+
+							.boca {
+								width: 60px;
+								height: 35.604px;
+								background: url(../img/boca.png);
+								background-position: 0 0;
+								background-size: 100% auto;
+								position: absolute;
+								top: 46%;
+								left: 0;
+								right: 0;
+								margin-left: auto;
+								margin-right: auto;
+
+								&.middle {
+									background-position-y: 71.208px;
+								}
+
+								&.open {
+									background-position-y: 35.604px;
+								}
+							}
 						}
 					}
 
