--- a/frontend/css/_agegate.scss
+++ b/frontend/css/_agegate.scss
@@ -11,6 +11,7 @@
 
 		.title {
 			margin-bottom: 40px;
+			max-width: 100%;
 		}
 
 		p {
@@ -21,6 +22,28 @@
 
 		button {
 			margin: 0 10px;
+		}
+
+		@media screen and (max-width: $screen-xs) {
+			position: absolute;
+			bottom: 0px;
+			background: url(../img/home/movil/pilucho.png);
+			background-size: 100% auto;
+			height: 466px;
+			max-height: 100%;
+			padding-top: 190px;
+
+			.title {
+				margin-bottom: 0px;
+			}
+
+			p {
+				margin-bottom: 20px;
+			}
+
+			button {
+				margin: 10px 0;
+			}
 		}
 	}
 }
