--- a/frontend/css/_home.scss
+++ b/frontend/css/_home.scss
@@ -14,7 +14,7 @@
 			background: url(../img/home/movil/pilucho.png);
 			width: 100%;
 			height: 466px;
-			background-size: 100% 100%;
+			background-size: 100% auto;
 			padding-top: 175px;
 
 			p {
